# SFML_GAME

./: CMakeLists.txt  main.cpp  run.sh.in
include/: FieldOfView.hpp  MyWindow.hpp  comon.h  person.h
src/: FieldOfView.cpp  MyWindow.cpp  person.cpp
test/: test.cpp
